added v11.2 and v11.2.1 to index.new.html and removed from current index.html

--- a/index.new.html
+++ b/index.new.html
@@ -430,7 +430,7 @@
     </div>
     <h1>hannahcodes.co.uk Changelog</h1>
 
-    <p> Last updated 02/03/2025</p>
+    <p> Last updated 04/03/2025</p>
     <div class="changelog">
         <hr id="v13.1">
         <div class="version">
@@ -1626,13 +1626,13 @@
         <hr id="v11.2.1">
         <div class="version">
             <h2>V11.2.1</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/69"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
-                    41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v10.1/index.html" class="a_link"><img
+                    69</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.2.1/index.html" class="a_link"><img
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a>
-                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v10.1"
+                <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.2.1"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">
                     source-code</a>
@@ -1641,26 +1641,47 @@
                 <li>
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>v11.1 to /old folder</li>
+                        <li>a new card for v11.1 of hannahcodes.co.uk</li>
                         </ll>
                     </ul>
                 <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="fixed">removed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>some html comments on blog page and blog posts</li>
                     </ul>
                 </li>
                 <hr class="hr_divider">
                 <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+                <h3> 31/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/68" class="a_link">
                         <img class="svg_git"
-                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
-            </ul>
+                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">68</a></h3>
+                <strong class="added"> added</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>v11.1 to /old folder</li>
+                    <li>a new card for v11.1 of hannahcodes.co.uk</li>
+                </ul>
+                <strong class="removed">removed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>some html comments on blog page and blog posts</li>
+                </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 1</h3>
+            <h3> 31/08/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/379059f26713bf7905b6d8449e1a31a4c3bb70b9"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...a4c3bb70b9</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>v11.1 to /old folder</li>
+                <li>a new card for v11.1 of hannahcodes.co.uk</li>
+            </ul>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some html comments on blog page and blog posts</li>
             </ul>
             </ul>
             </li>
@@ -1669,10 +1690,10 @@
         <hr id="v11.2">
         <div class="version">
             <h2>V11.2</h2>
-            <h3 class="version_date"> 26/04/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/"
+            <h3 class="version_date"> 31/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/67"
                     class="a_link"><img class="svg_git"
                         src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
-                    41</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.2/index.html" class="a_link"><img
+                    67</a> <a href="https://old.hannahcodes.co.uk/hannahcodes/v11.2/index.html" class="a_link"><img
                         class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/monitor-light.svg">
                     website</a>
                 <a href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/tree/main/hannahcodes/v11.2"
@@ -1684,90 +1705,179 @@
                 <li>
                     <strong class="added">added</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>new blog post</li>
+                        <li>links to brand new changelog.html file</li>
+                        <li>this years gcse math result to the college table on about.html</li>
+                        <li>link to my new alt twitter account</li>
                         </ll>
                     </ul>
                 <li>
-                    <strong class="fixed">fixed:</strong>
+                    <strong class="removed">removed:</strong>
                     <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>changelog.md file which has been moved to it own repository</li>
+                    </ul>
+                <li>
+                    <strong class="amended">amended:</strong>
+                    <ul style="list-style-type: disc; padding-left: 20px;">
+                        <li>index.html blog section which now displays blog 6 and blog 5 preview
+                            cards</li>
+                        <li>changelog img thumbnail preview on the project card</li>
+                        <li>changelog svg icon on the changelog project card</li>
+                        <li>about text on index and about.html</li>
+                        <li>about me image</li>
+                        <li>some project card thumbnail image previews</li>
+                        <li>readme.md file</li>
+                        <li>v11.2 image preview</li>
                     </ul>
                 </li>
                 <hr class="hr_divider">
-                <h3 class="h3_header"> rc 3</h3>
-                <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+                <h3 class="h3_header"> rc 4</h3>
+                <h3> 31/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/66" class="a_link">
                         <img class="svg_git"
-                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                            src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg"> 66</a></h3>
+                <strong class="fixed"> fixed</strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>index about text</li>
+                </ul>
+                <strong class="amended"> amended </strong>
+                <ul style="list-style-type: disc; padding-left: 20px;">
+                    <li>v11.2 image preview</li>
+                    <li>readme.md file</li>
+                </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> Dev 11</h3>
+            <h3> 15/08/23 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/583baca6d7f88f3821f2e599104c4b8ad51687d0"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...8ad51687d0</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
+            </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> Dev 10</h3>
+            <h3> 31/08/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/305c7de628cf7e4a28cbb71e5d5fa1b562a389b6"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...b562a389b6</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>v11.2 image preview</li>
+            </ul>
+            </ul>
+            </li>
+            <hr class="hr_divider">
+            <h3 class="h3_header"> Dev 9</h3>
+            <h3> 31/08/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/f4bdbfcf1b4db8d09d7489e525e6917cfe96732f"
+                    class="a_link">
+                    <img class="svg_git"
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...7cfe96732f</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>index about text</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
             <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3> 30/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/65" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">65</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>this years gcse math result to the college table on about.html</li>
+                <li>links to my new alt twitter account</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about me image</li>
+                <li>some project card thumbnail image previews</li>
+                <li>readme.md file</li>
+            </ul>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 8</h3>
+            <h3> 30/08/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/9cf2f8ef5068c57bce6382210026ddebfccbd796"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...ebfccbd796</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 7</h3>
+            <h3> 30/08/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/9c296c6bfbceccf3f85e5518da0fd4021f414918"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...021f414918</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 6</h3>
+            <h3> 30/08/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/4441062f297835b8ab4be24309a172b88e8d6abd"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...b88e8d6abd</a>
+            </h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 5</h3>
+            <h3> 30/08/22 <a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/36307e72b568a3e392b63e9e0f6c5578fc54db21"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...78fc54db21</a>
+            </h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>this years gcse math result to the college table on about.html</li>
+                <li>links to my new alt twitter account</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about me image</li>
+                <li>some project card thumbnail image previews</li>
+                <li>readme.md file</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> rc 2</h3>
+            <h3> 24/08/22 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/64" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
-            </ul>
-            </ul>
-            </li>
-            <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
-            </ul>
-            </ul>
-            </li>
-            <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
-            </ul>
-            </ul>
-            </li>
-            <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">64</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about text on index and about.html</li>
             </ul>
             </ul>
             </li>
