reduced font size on sidebar

--- a/index.new.html
+++ b/index.new.html
@@ -1550,74 +1550,162 @@
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 7</h3>
+            <h3> 28/09/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/1eba4193996183b989280ae005b822493332d9e6"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...93332d9e6</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>new card on project.html</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some image thumbnails not displaying correctly</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>updated some project links</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 6</h3>
+            <h3> 19/09/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/9d75d98da86203bb8e5047e1f334faea34f21756"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...ea34f21756</a></h3>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some left over blog css code that was no longer needed</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> rc 2</h3>
+            <h3> 18/09/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/71" class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">71</a></h3>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>old folder</li>
+            </ul>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some nav bar links, which were not link to the correct url</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>readme.md file</li>
+                <li>links to old version of hannahcodes.co.uk as they can now be found at <a
+                        href="https://old.hannahcodes.co.uk"> https://old.hannahcodes.co.uk </a> <a
+                        href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/"> Github sorce code
+                    </a></li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 5</h3>
+            <h3> 18/09/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/2a08a1fd08cd368221d6baf3e0ee953f090147d"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...53f090147d</a></h3>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>old folder</li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>links to old version of hannahcodes.co.uk as they can now be found at a
+                    <a href="https://old.hannahcodes.co.uk"> https://old.hannahcodes.co.uk </a> <a
+                        href="https://github.com/autumn-skylight/old.hannahcodes.co.uk/"> Github sorce code
+                    </a>
+                </li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 4</h3>
+            <h3> 11/09/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/d1f3a89d6660625f66fc7618de402dadb8ca0b800"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...db8ca0b800</a></h3>
+            <strong class="fixed"> fixed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>some nav bar links, which were not link to the correct url</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
-                    <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+            <h3 class="h3_header"> rc 1</h3>
+            <h3> 03/09/22<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/70" class="a_link">
+                    <img class="svg_git" src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">
+                    70</a></h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>link to new blog webpage (blog.hannahcodes.co.uk)</li>
+            </ul>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>blog page folder as hannahcodes blog can be found at a different url
+                </li>
+            </ul>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about text on about.html</li>
+                <li>work experience about section on about.html</li>
+                <li>readme.md file to include new link to hannahcodes blogs</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 3</h3>
+            <h3> 03/09/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/581ec87455dcf82dbe36a24bb032937fbcc6cafe"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...7fbcc6cafe</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>work experience about section on about.html</li>
+                <li>readme.md file to include new link to hannahcodes blogs</li>
+
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 2</h3>
+            <h3> 03/09/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/e1f0bac68d4e712c687e880ee38f5dc38a76f798"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...c38a76f798</a></h3>
+            <strong class="amended"> amended </strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>about text on about.html</li>
             </ul>
             </ul>
             </li>
             <hr class="hr_divider">
-            <h3 class="h3_header"> rc 3</h3>
-            <h3> 15/08/23<a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/100" class="a_link">
+            <h3 class="h3_header"> Dev 1</h3>
+            <h3> 31/08/22<a
+                    href="https://github.com/autumn-skylight/hannahcodes.co.uk/commit/dbca42c949f0d5f32dc96984a9d717678db58372"
+                    class="a_link">
                     <img class="svg_git"
-                        src="https://assets.hannahcodes.co.uk/images/logo/git-pull-request-light.svg">100</a></h3>
+                        src="https://assets.hannahcodes.co.uk/images/logo/git-commit-light.svg">...678db58372</a>
+            </h3>
+            <strong class="added"> added</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>link to new blog webpage (blog.hannahcodes.co.uk)</li>
+            </ul>
+            <strong class="removed">removed</strong>
+            <ul style="list-style-type: disc; padding-left: 20px;">
+                <li>blog page folder as hannahcodes blog can be found at a different url
+                </li>
             </ul>
             </ul>
             </li>
