Update index.html to include new message

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ rel="stylesheet">
 </head>
 <body class="changelog_body">
     <h1 class="changelog_h1">hannahcodes.co.uk changelog: updated 18/08/2023</h1>
+     <h3 class="changelog_h1">new changelog design coming soon!</h3>
 <hr> 
 <h2> v13.1 - 18/08/2023 <a href="https://github.com/autumn-skylight/hannahcodes.co.uk/pull/103">#103</a></h2>
     <h3 class="added"> added </h3>
